<resources>
    <string name="app_name">遇见</string>
    <string name="back">back</string>
    <string name="app_tab_chat_list">聊天</string>
    <string name="app_tab_friend">好友</string>
    <string name="app_tab_discovery">偶遇</string>
    <string name="app_tab_personal">我的</string>
    <string name="collect">我的关注</string>
    <string name="credit_grade">信用点</string>
    <string name="setting">设置</string>
    <string name="help">帮助与反馈</string>
    <string name="about">关于我们</string>
    <string name="login_user_tip">请输入手机号/用户名/邮箱</string>
    <string name="login_user_password_tip">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_text">注册新用户</string>
    <string name="send">发送</string>
    <string name="text_loading">加载中 ……</string>
    <string name="jsonError">json异常</string>
    <string name="passNotMatch2">两次密码不一致</string>
    <string name="phoneError">电话号码不正确</string>
    <string name="signIn">注册中……</string>
    <string name="usernameNotEmpty">用户名不能为空</string>
    <string name="input_chat_message">输入聊天消息</string>
    <string name="loading">努力加载中……</string>
    <string name="load_fail">加载失败 o(╥﹏╥)o</string>
    <string name="chat_fragment_title">聊天</string>
    <string name="friends_fragment_title">好友</string>
    <string name="send_message_not_allow_null">消息不能为空</string>
    <string name="personal_data">个人资料</string>
    <string name="discovery_fragment_title">偶遇</string>
    <string name="my_collect">我的关注</string>
    <string name="forget_password_activity_title">找回密码</string>
    <string name="logout">退出登录</string>
    <string name="setting_activity_title">设置</string>
    <string name="personal_home_page_title">个人资料</string>
    <string name="help_feedback_activity_title">帮助与反馈</string>
    <string name="find_pass_no_method">当前没有任何方式可找回密码</string>
    <string name="use_this_method_to_find_pss">请使用以下方式找回密码</string>
    <string name="next_step">下一步</string>
    <string name="finish_text">完成</string>
    <string name="passNotMatch">密码格式不正确</string>
    <string name="personal_center_activity_title">个人资料</string>
    <string name="account_security_activity_title">账号与安全</string>
    <string name="about_we_activity_title">关于我们</string>
    <string name="credit_activity_title">信用点</string>
    <string name="notification_activity_title">消息推送</string>
    <string name="login_activity_title">登录</string>
</resources>
