<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/personal_layout_1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_personal_head">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/personal_head_picture"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/personal_account_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/personal_head_picture"
                android:text="@string/app_name"
                android:textColor="#f0ffff"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/personal_info_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_data"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_arrow_right_white" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_layout_1">

            <LinearLayout
                android:id="@+id/item_group_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/item_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/personal_collects_item"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/item_press_change"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_personal_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="19dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="11dp"
                        android:text="@string/collect"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="19dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arrow_right_gray" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_group_1"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/item_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/personal_credit_point_item"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/item_press_change"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_personal_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="19dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="11dp"
                        android:text="@string/credit_grade"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="19dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_credit_point"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="14dp"
                            android:gravity="center"
                            android:textColor="#ff666666"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arrow_right_gray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_group_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_group_2"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/item_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/personal_setting_item"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/item_press_change"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_personal_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="19dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="11dp"
                        android:text="@string/setting"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="19dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arrow_right_gray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_group_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_group_3"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/item_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/personal_help_feedback_item"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/item_press_change"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_personal_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="19dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="11dp"
                        android:text="@string/help"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="19dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arrow_right_gray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_group_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_group_4"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@drawable/item_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/personal_about_we_item"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/item_press_change"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_personal_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_marginStart="19dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="11dp"
                        android:text="@string/about"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="19dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_arrow_right_gray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>